Add FormElement::getTag (#630)